<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"

    android:paddingVertical="10dp"
    tools:context=".KpclSearch">

    <!--tools:context=".KpclData">-->

    <Button
        android:id="@+id/btn_search_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/search" />


    <EditText
        android:id="@+id/et_EndDate"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="81dp"
        android:inputType="date"
        android:hint="@string/end_date" />

    <EditText
        android:id="@+id/et_StartDate"

        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:inputType="date"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:hint="@string/start_date" />

</RelativeLayout>